--- a/examples/demo/package.json
+++ b/examples/demo/package.json
@@ -11,32 +11,32 @@
     "aurelia2-simple-api": "0.0.1"
   },
   "devDependencies": {
-    "@aurelia/testing": "2.0.0-beta.9",
-    "@aurelia/webpack-loader": "2.0.0-beta.9",
-    "@aurelia/ts-jest": "2.0.0-beta.9",
-    "@typescript-eslint/eslint-plugin": "^5.27.1",
-    "@typescript-eslint/parser": "^5.27.1",
+    "@aurelia/testing": "2.0.0-beta.15",
+    "@aurelia/webpack-loader": "2.0.0-beta.15",
+    "@aurelia/ts-jest": "2.0.0-beta.15",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "@types/jest": "^28.1.1",
+    "aurelia": "2.0.0-beta.15",
     "eslint": "^8.17.0",
     "htmlhint": "^1.1.4",
-    "rimraf": "^3.0.2",
-    "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.9.2",
+    "webpack": "^5.91.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
     "html-webpack-plugin": "^5.5.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "style-loader": "^3.3.1",
     "css-loader": "^6.7.1",
-    "dotenv-webpack": "^7.1.0",
+    "dotenv-webpack": "^8.1.0",
     "ts-loader": "^9.3.0",
-    "postcss-loader": "^7.0.0",
+    "postcss-loader": "^8.1.1",
     "postcss": "^8.4.14",
     "autoprefixer": "^10.4.7",
     "@types/node": "^17.0.41",
-    "typescript": "^4.7.3",
+    "typescript": "^5.4.5",
     "tslib": "^2.4.0",
-    "jest": "^28.1.1",
-    "jest-environment-jsdom": "^28.1.1",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "jest-transform-stub": "^2.0.0"
   },
   "scripts": {
