--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
         "examples/*"
     ],
     "devDependencies": {
-        "@aurelia/testing": "^2.0.0-beta.9",
-        "@typescript-eslint/eslint-plugin": "^5.38.1",
-        "@typescript-eslint/parser": "^5.38.1",
-        "aurelia": "^2.0.0-beta.9",
-        "@aurelia/router": "2.0.0-beta.9",
-        "cpx2": "^4.1.1",
+        "@aurelia/testing": "2.0.0-beta.15",
+        "@aurelia/router": "2.0.0-beta.15",
+        "@typescript-eslint/eslint-plugin": "^7.8.0",
+        "@typescript-eslint/parser": "^7.8.0",
+        "aurelia": "2.0.0-beta.15",
+        "cpx2": "^7.0.1",
         "cross-env": "^7.0.3",
         "eslint": "^8.24.0",
         "eslint-plugin-import": "^2.26.0",
@@ -26,7 +26,7 @@
         "jest": "^29.5.0",
         "jest-cli": "^29.5.0",
         "jest-transform-stub": "^2.0.0",
-        "rimraf": "^3.0.2",
+        "rimraf": "^5.0.5",
         "ts-jest": "^29.1.0",
         "ts-node": "^10.9.1",
         "typescript": "^5.1.3"
