--- a/packages/simple-api/package.json
+++ b/packages/simple-api/package.json
@@ -21,6 +21,6 @@
     },
     "devDependencies": {},
     "peerDependencies": {
-        "aurelia": ">=2.0.0-beta.9"
+        "aurelia": "2.0.0-beta.15"
     }
 }
